# chess2

./: .gitignore  README.md  chess2.opam  dune-project
struct/: bishop_attack.ml  bishop_attack.mli  game.ml  game.mli  king_attack.ml  king_attack.mli  knight_attack.ml  knight_attack.mli  macros.ml  macros.mli  pawn_attacks.ml  pawn_attacks.mli  rook_attack.ml  rook_attack.mli  slide_attack.ml  slide_attack.mli  state.ml  state.mli
test/: dune  test_chess.ml
utils/: bot.ml  bot.mli  dune
